# photoToDices

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  dice_art_with_qt.py  mkdocs.yml  photoToDices  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md
photo_to_dices/: __init__.py  art_generator.py  custom_file_dialog.py  dice_art_with_qt.py
photo_to_dieses/: dice_art_with_qt.py
