[tool.poetry]
name = "photo_to_dices"
version = "0.1.3"
description = "Convert a photo to a dice-based visual representation"
authors = ["vahidtwo <vahidtwo@gmail.com>"]
readme = "README.md"
packages = [{ include = "photo_to_dices" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">3.11"
PyQt5 = ">5.15.10"
PyQt5-Qt5 = ">5.15.2"
PyQt5-sip = ">12.13.0"
pillow = ">10.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }

[tool.poetry.scripts]
photo2dice = "photo_to_dices.dice_art_with_qt:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
preview = true

[tool.coverage.report]
skip_empty = true

